--- a/src/main/resources/microservice.yaml
+++ b/src/main/resources/microservice.yaml
@@ -19,7 +19,7 @@ cse:
     #client:
       #serverUri: https://cse.cn-north-1.myhuaweicloud.com
   rest:
-    address: [::1]:8080
+    address: [2407:c080:17ef:ffff::7924:34ef]:8080
   #When a local project is deployed as a container outside a cluster, you need to delete all monitor and credentials comments and configure the AK/SK.
   #credentials:
     #accessKey: ak
