--- a/src/main/resources/microservice.yaml
+++ b/src/main/resources/microservice.yaml
@@ -19,7 +19,7 @@ cse:
     #client:
       #serverUri: https://cse.cn-north-1.myhuaweicloud.com
   rest:
-    address: "[2407:c080:1200:1dc:9cce:e9dc:b12a:4798]:8080"
+    address: "[fe80::f816:3eff:fe19:7d48]:8080"
   #When a local project is deployed as a container outside a cluster, you need to delete all monitor and credentials comments and configure the AK/SK.
   #credentials:
     #accessKey: ak
